--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$archComponentsVersion"
     implementation "androidx.lifecycle:lifecycle-runtime:$archComponentsVersion"
 
+    /* swipe */
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
+
     /* room */
     /*
     implementation "androidx.room:room-runtime:$roomVersion"
